[package]
name = "wascap-httpsrv"
version = "0.1.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wascap-codec = "0.0.2"
actix-web = "1.0.0-beta.4"
actix-multipart = "0.1.1"
futures = "0.1.27"
log = "0.4.6"
env_logger = "0.6"
crossbeam-channel = "0.3.8"
crossbeam = "0.7.1"
crossbeam-utils = "^0.6.5"
prost-types = "0.5.0"
prost = "0.5.0"
bytes = "0.4.12"