[package]
name = "waxosuit-host"
version = "0.0.1"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[[bin]]
name = "waxosuit"

[dependencies]
libloading = "0.5.0"
crossbeam-channel = "0.3.8"
crossbeam = "0.7.1"
crossbeam-utils = "^0.6.5"
#wascap-codec = { path = "../../wascap-codec" }
#wascap = { path = "../../wascap" }
wascap-codec = "0.0.2"
wascap = "0.0.1"
wasmer-runtime = "0.4.1"
wasmer-runtime-core = "0.4.1"
prost = "0.5.0"
bytes = "0.4.12"
log = "0.4.6"
env_logger = "0.6"
lazy_static = "1.3.0"
quicli = "0.4"
structopt = "0.2"
term-table = "1.1.0"
exitfailure = "0.5.1"
chrono-humanize = "0.0.11"
chrono = "0.4.6"
reqwest = "0.9.18"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"